cargo-features = ["strip"]
[package]
name = "bmper"
version = "1.0.1"
authors = ["Exotic"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
image = "0.23.13"
quit = "1.1.2"

[[bin]]
name = "bmpr_encoder"
path = "src/encoder/bin/main.rs"

[[bin]]
name = "bmpr_decoder"
path = "src/decoder/bin/main.rs"

[profile.release]
strip = "symbols"
opt-level = 3
debug = 0
lto = true
panic = "unwind"
overflow-checks = true
debug-assertions = false