[package]
name = "bmper"
version = "1.0.1"
authors = ["Exotic"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
image = "0.24"

[[bin]]
name = "bmpr_encoder"
path = "src/encoder/bin/main.rs"

[[bin]]
name = "bmpr_decoder"
path = "src/decoder/bin/main.rs"

[profile.release]
strip = true
opt-level = "z"
debug = 0
lto = true
panic = "abort"
overflow-checks = true
debug-assertions = false
codegen-units = 1